# NanoVar---archived

./: Makefile.am  Makefile.in  README.md  bootstrap  configure  configure.ac  requirement.txt
blast/hs-blastn-src/: edits.txt
blast/hs-blastn-src/sources/: utility.h
genome_filter/: mm9_filter.bed
model/: ANN.E100B400L2N12-5D0.2SGDsee30_het_v5.h5
scripts/: Makefile.am  Makefile.in  bowtie2_dummy.py  keras_ANN_inference.py  nanovar.in  nv_bed_validator.py  nv_breakpoint_parser.py  nv_chrnum.py  nv_fasta_validator.py  nv_fastq-a_validator.py  nv_hsblast_SV_detector.py  nv_hsblast_parse.py  nv_hsblast_random_spliter.py  nv_lcov_outlier.py  nv_lr_overlap.py  nv_nanocorrector.py  nv_parser_VCF.py  nv_report.py  nv_scov.py  nv_test.py  py_readlink.py
test/: valid_md5.txt
test/pre-check-files/: bed1.sort  bed2.sort  correct.fa  fastq1  fastq2  overlap.ANN0.6.tsv  sam
virtualenv-15.2.0/virtualenv.egg-info/: SOURCES.txt
